<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_menu_background"
    android:orientation="vertical" >

		
        <Button
            android:id="@+id/game"
            android:background="@color/menu_button"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_game" />

        <Button
            android:id="@+id/instructions"
            android:background="@color/menu_button"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_instructions" />

        <Button
            android:id="@+id/settings"
            android:background="@color/menu_button"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_settings" />

        <Button
            android:id="@+id/credits"
            android:background="@color/menu_button"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_credits" />

        <Button
            android:id="@+id/exit"
            android:background="@color/menu_button"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_exit" />

    
</LinearLayout>
